Fix spacing between search bar and candidate list

--- a/frontend/src/stylesheets/search.scss
+++ b/frontend/src/stylesheets/search.scss
@@ -16,7 +16,7 @@
   height: 400px;
   display: flex;
   flex-wrap: wrap;
-  top: 300px;
+  top: 230px;
   position: absolute;
 }
 .candidates-names {
